# rtmaps-cuda-examples

./: .gitignore  CMakeLists.txt  README.md  rtmaps_package.pckinfo
src/common/: maps_dynamic_custom_struct_component.hpp  my_cuda_struct.h
src/consumer/: maps_cuda_struct_consumer.cpp  maps_cuda_struct_consumer.hpp
src/producer/: kernel1.cu  kernel1.h  maps_cuda_struct_producer.cpp  maps_cuda_struct_producer.hpp
test/: producer-consumer.rtd
